[Android,Cast] Report correctly when devices are not available.

The ChromeMediaRouterDialogController now reports when the source URN is
not supported so that the native side can reject the PresentationRequest
correctly.
CastMediaRouteProvider now reports no sinks available if the source URN
is not supported or if Android MediaRouter's API are not present (like
on JB MR1). For the latter, we now do create ChromeMRP when MediaRouter
is null and check if it's null before using (was already checked
everywhere, except for one spot changed in this CL).

BUG=706882
TEST=manual at https://googlechrome.github.io/samples/presentation-api/

Review-Url: https://codereview.chromium.org/2783363002
Cr-Commit-Position: refs/heads/master@{#462887}

Former-commit-id: 8a9962171b6d2f8e98c9d312c433087425b3f154